--- a/index.html
+++ b/index.html
@@ -1,13 +1,24 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-US">
 <head>
     <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My First Website</title>
+    <title>Doormat</title>
 </head>
 <body>
-    <h1>Welcome to My Website</h1>
+    <h1>Doormat's Website</h1>
     <p>This is my first GitHub Pages website.</p>
+    <pre>1 space 2  space 3   space 4    space
+    testing formatting newline
+    newline
+    newline
+    end</pre>
+    <hr>
+    <h1>Image test</h1>
+
+    <hr>
+    <h1>Video test</h1>
+    
 </body>
 </html>
