--- a/index.html
+++ b/index.html
@@ -14,11 +14,17 @@
     newline
     newline
     end</pre>
+    <p><b>Testing bold</b></p>
+    <p><i>Testing italic</i></p>
+    <p>Testing<sub> subscript</sub> and testing<sup>superscript</sup></p>
     <hr>
     <h1>Image test</h1>
-
+    <img src="media/fumo.jpg" alt="Satori and Koishi fumos" width=500>
     <hr>
     <h1>Video test</h1>
-    
+    <video width="600" controls>
+    <source src="media/2022-12-18 18-43-44_Trim.mp4" type="video/mp4">
+    Your browser does not support the video tag.
+    </video>
 </body>
 </html>
