--- a/index.html
+++ b/index.html
@@ -26,5 +26,14 @@
     <source src="media/2022-12-18 18-43-44_Trim.mp4" type="video/mp4">
     Your browser does not support the video tag.
     </video>
+    <hr>
+    <h1>GIF test</h1>
+    <img src="media/__hanyuu_higurashi_no_naku_koro_ni_drawn_by_nyu_nyu_1__4ec8a6ae7062894540b5deef6cd25ecc.gif" width=500>
+    <hr>
+    <h1>bro is not there :skull:</h1>
+    <img src="media/no z.png" width=500>
+    <hr>
+    <h2>sheep</h2>
+    <img src="media/sheep.jpg" width=500>
 </body>
 </html>
