--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </video>
     <hr>
     <h1>GIF test</h1>
-    <img src="media/__hanyuu_higurashi_no_naku_koro_ni_drawn_by_nyu_nyu_1__4ec8a6ae7062894540b5deef6cd25ecc.gif" alt="hanyuu dancing" width=500>
+    <img src="media/hanyuu.gif" alt="hanyuu jumping" width=500>
     <hr>
     <h1>bro is not there :skull:</h1>
     <img src="media/no z.png" alt="z not in voice channel" width=500>
