--- a/index.html
+++ b/index.html
@@ -35,5 +35,8 @@
     <hr>
     <h2>sheep</h2>
     <img src="media/sheep.jpg" alt="picture of cartoon sheep" width=500>
+    <hr>
+    <h1>bro took a pic like we won worlds</h1>
+    <img src="media/IMG_0911.jpg" alt="splatoon leaderboard scream" width=500>
 </body>
 </html>
