--- a/index.html
+++ b/index.html
@@ -38,5 +38,8 @@
     <hr>
     <h1>bro took a pic like we won worlds</h1>
     <img src="media/IMG_0911.jpg" alt="splatoon leaderboard scream" width=500>
+    <hr>
+    <h1>key is NOT there</h1>
+    <img src="media/no key.jpg" alt="become fumo key not there." width=500>
 </body>
 </html>
