--- a/index.html
+++ b/index.html
@@ -40,6 +40,6 @@
     <img src="media/IMG_0911.jpg" alt="splatoon leaderboard scream" width=500>
     <hr>
     <h1>key is NOT there</h1>
-    <img src="media/not key.jpg" alt="become fumo key not there." width=500>
+    <img src="media/not key.png" alt="become fumo key not there." width=500>
 </body>
 </html>
