--- a/index.html
+++ b/index.html
@@ -41,5 +41,8 @@
     <hr>
     <h1>key is NOT there</h1>
     <img src="media/not key.png" alt="become fumo key not there." width=500>
+    <h1>pikanyan</h1>
+    <img src="media/pikanyan.gif" alt="pikanyan cat" width=500>
+    <hr>
 </body>
 </html>
