--- a/index.html
+++ b/index.html
@@ -45,5 +45,8 @@
     <h1>pikanyan</h1>
     <img src="media/pikanyan.gif" alt="pikanyan cat" width=500>
     <hr>
+    <h1>suika</h1>
+    <img src="media/goblin.png" alt="suika fumo" width=500>
+    <hr>
 </body>
 </html>
