--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <img src="media/pikanyan.gif" alt="pikanyan cat" width=500>
     <hr>
     <h1>suika</h1>
-    <img src="media/goblin.png" alt="suika fumo" width=500>
+    <img src="media/gobiln.png" alt="suika fumo" width=500>
     <hr>
 </body>
 </html>
