--- a/index.html
+++ b/index.html
@@ -48,5 +48,8 @@
     <h1>suika</h1>
     <img src="media/gobiln.png" alt="suika fumo" width=500>
     <hr>
+    <h1>bro is STILL not there</h1>
+    <img src="media/notkeyagain.png" alt="become fumo key not there again." width=500>
+    <hr>
 </body>
 </html>
